Fix error in remote-benchmark