@@ -25,13 +25,15 @@ dependencies {
   compile 'org.scala-lang:scala-compiler:2.10.3'
 
   compile 'ch.qos.logback:logback-classic:1.0.13'
-  compile group: 'com.google.guava', name: 'guava', version: '15.0'
+  compile 'com.google.guava:guava:15.0'
 
   compile 'io.netty:netty-all:4.0.10.Final'
   compile 'net.minidev:json-smart:1.2'
 
-  //testCompile 'org.scalatest:scalatest_2.10:1.9.2'
-  //testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.0'
+  compile 'org.scala-lang.modules:scala-async_2.10:0.9.0-M4'
+
+  testCompile 'org.scalatest:scalatest_2.10:1.9.2'
+  testCompile 'junit:junit:4.11'
 }
 
 sourceSets {
@@ -84,7 +86,7 @@ task runRemotePerfTests(description: '') {
     def classPath = classPathBuilder.toString()+ "./classes"
 
     def process = ["/bin/bash", "-s"].execute()
-    def cmd =  """fsc -shutdown && scala -cp ${classPath} perf-classes/remote-benchmark.scala 2 10000"""
+    def cmd =  """fsc -shutdown && scala -cp ${classPath} perf-classes/remote-benchmark.scala 8 10000"""
     println(cmd)
     process.withWriter { it.write(cmd) }
     process.consumeProcessOutput(System.out, System.err)
@@ -92,6 +94,7 @@ task runRemotePerfTests(description: '') {
     println """runPerfTests exit code ${code}"""
   }
 }
+
 
 jar {
   def classPath = new StringBuffer()
@@ -139,3 +142,7 @@ runLocalPerfTests.dependsOn copyScriptForLocalBenchmark
 build.dependsOn runLocalPerfTests
 
 //cd monitor && fsc -shutdown && scala -cp netty-all-4.0.10.Final.jar:../classes/ broadcast-monitor.scala
+//java -server -Xmx2G -XX:MaxPermSize=756m -XX:+AggressiveOpts -jar gateway-server-0.1.jar 192.168.0.143
+
+// try to use it https://github.com/netty/netty/pull/2035
+// -Dio.netty.leakDetectionLevel=2
